# cue-stack

./: .gitignore  CONTRIBUTING.md  MIGRATION_NOTICE.md  README.md  README.zh-CN.md  RELEASE_GUIDE.md  TRADEMARK.md  package.json  pnpm-workspace.yaml
.github/workflows/: publish.yml
cue-command/: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json  protocol.md
cue-command/.github/workflows/: ci.yml  publish.yml
cue-command/docs/: how-to-submit-a-pr.md  proto.md
cue-command/src/: cli.js  db.js  envelope.js  handler.js  io.js  naming.js  proto.js
cue-console/: .gitignore  ARCHITECTURE.md  MIGRATION.md  README.md  REFACTORING_COMPLETE.md  UI_REFACTORING_SUMMARY.md  next.config.ts  package-lock.json  package.json
cue-console/.github/workflows/: publish.yml
cue-console/design-system/: MASTER.md
cue-console/docs/: devs.md
cue-console/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
cue-console/src/components/: chat-composer.tsx  chat-view.tsx  confirm-dialog.tsx  conversation-list.tsx  conversation-list.tsx.backup  create-group-dialog.tsx  markdown-renderer.tsx  payload-card.tsx  perf-monitor.tsx
cue-console/src/contexts/: chat-providers.tsx  config-context.tsx  input-context.tsx  ui-state-context.tsx
cue-console/src/hooks/: use-audio-notification.ts  use-avatar-management.ts  (+15 more)
cue-mcp/: .gitignore  README.md  humanagent.md  pyproject.toml  requirements.txt
cue-mcp/.github/workflows/: publish.yml
cue-mcp/cuemcp/: models.py  naming.py  server.py  terminal_render.py  test.py  vscode_simulator.py
(+58 files in other folders)
